--- a/scss/_assets.scss
+++ b/scss/_assets.scss
@@ -1,5 +1,5 @@
-$primary: #B042FF;
-$secondary: #3eeb63;
+$primary: #37e25c;
+$secondary: #48eb6c;
 $third: #CA8DFD;
 $white: #FFFFFF;
 $black: #1D1D1D;
