--- a/css/style.css
+++ b/css/style.css
@@ -73,17 +73,17 @@ body {
 }
 
 #hero .primary-btn:hover {
-  border: 1px solid #B042FF;
-  background-color: #B042FF;
+  border: 1px solid #37e25c;
+  background-color: #37e25c;
   color: #FFFFFF;
   -webkit-transition-duration: 300ms;
           transition-duration: 300ms;
 }
 
 #hero .secondary-btn:hover {
-  border: 1px solid #B042FF;
+  border: 1px solid #37e25c;
   background-color: #FFFFFF;
-  color: #C175FF;
+  color: #48eb6c;
   -webkit-transition: all 300ms;
   transition: all 300ms;
 }
@@ -129,7 +129,7 @@ body {
 #portfolio {
   width: 100%;
   padding: 2em;
-  background-color: #C175FF;
+  background-color: #48eb6c;
 }
 
 #portfolio h2 {
@@ -152,7 +152,7 @@ body {
 #portfolio .third-btn-div button {
   border: 1px solid #FFFFFF;
   text-decoration: none;
-  background-color: #C175FF;
+  background-color: #48eb6c;
   color: #FFFFFF;
   font-size: 20px;
   padding: 10px;
@@ -164,7 +164,7 @@ body {
 #portfolio .third-btn:hover {
   border: 1px solid #FFFFFF;
   background-color: #FFFFFF;
-  color: #B042FF;
+  color: #37e25c;
   -webkit-transition: all 300ms;
   transition: all 300ms;
 }
